--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="bg-gradient-to-r from-blue-600 to-purple-600 text-white p-6 shadow-lg">
         <div class="container mx-auto">
             <h1 class="text-3xl font-bold text-shadow-lg">Tailwind CSS 3.x Benchmark</h1>
-            <p class="text-blue-100 mt-2 text-opacity-80">Testing migration breaking changes</p>
+            <p class="text-blue-100/80 mt-2">Testing migration breaking changes</p>
         </div>
     </header>
 
@@ -39,11 +39,11 @@
     <main class="container mx-auto px-6 py-8">
         <!-- Hero Section with opacity utilities -->
         <section class="text-center mb-12">
-            <div class="bg-white bg-opacity-90 rounded-4xl p-8 shadow-xl">
+            <div class="bg-white/90 rounded-4xl p-8 shadow-xl">
                 <h2 class="text-4xl font-bold text-gray-800 mb-4">
                     Breaking Changes Demo
                 </h2>
-                <p class="text-gray-600 text-lg mb-6 text-opacity-75">
+                <p class="text-gray-600/75 text-lg mb-6">
                     This page demonstrates Tailwind CSS 3.x features that will break in v4
                 </p>
                 <div class="flex justify-center space-x-4">
@@ -61,14 +61,14 @@
         <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
             <!-- Card 1: Opacity Utilities -->
             <div class="card">
-                <div class="bg-red-500 bg-opacity-20 rounded-lg p-4 mb-4">
-                    <h3 class="text-xl font-bold text-red-800 text-opacity-90">Opacity Utilities</h3>
+                <div class="bg-red-500/20 rounded-lg p-4 mb-4">
+                    <h3 class="text-xl font-bold text-red-800/90">Opacity Utilities</h3>
                 </div>
-                <p class="text-gray-600 text-opacity-75 mb-4">
+                <p class="text-gray-600/75 mb-4">
                     Using bg-opacity-*, text-opacity-* utilities that need migration
                 </p>
-                <div class="border-l-4 border-red-500 border-opacity-50 pl-4">
-                    <p class="text-sm text-red-600 text-opacity-80">
+                <div class="border-l-4 border-red-500/50 pl-4">
+                    <p class="text-sm text-red-600/80">
                         Will become: bg-red-500/20, text-red-800/90
                     </p>
                 </div>
@@ -184,7 +184,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 mt-12">
         <div class="container mx-auto px-6 text-center">
-            <p class="text-gray-300 text-opacity-75">
+            <p class="text-gray-300/75">
                 © 2024 Tailwind CSS 3.x Benchmark. Built for migration testing.
             </p>
         </div>
