--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="dist/styles.css" rel="stylesheet">
 </head>
 <body class="bg-gray-50">
-    <!-- Header with gradient background (bg-gradient-to-r) -->
-    <header class="bg-gradient-to-r from-blue-600 to-purple-600 text-white p-6 shadow-lg">
+    <!-- Header with gradient background (bg-linear-to-r) -->
+    <header class="bg-linear-to-r from-blue-600 to-purple-600 text-white p-6 shadow-lg">
         <div class="container mx-auto">
             <h1 class="text-3xl font-bold text-shadow-lg">Tailwind CSS 3.x Benchmark</h1>
             <p class="text-blue-100/80 mt-2">Testing migration breaking changes</p>
@@ -76,13 +76,13 @@
 
             <!-- Card 2: Gradient Utilities -->
             <div class="card">
-                <div class="bg-gradient-to-br from-green-400 to-blue-500 rounded-lg p-4 mb-4">
+                <div class="bg-linear-to-br from-green-400 to-blue-500 rounded-lg p-4 mb-4">
                     <h3 class="text-xl font-bold text-white">Gradient Utilities</h3>
                 </div>
                 <p class="text-gray-600 mb-4">
-                    Using bg-gradient-to-* utilities that become bg-linear-to-*
+                    Using bg-linear-to-* utilities (migrated from bg-gradient-to-*)
                 </p>
-                <div class="bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500 h-4 rounded-full">
+                <div class="bg-linear-to-r from-yellow-400 via-red-500 to-pink-500 h-4 rounded-full">
                 </div>
             </div>
 
