Update flexbox utility classes by removing the "flex-" prefix from shrink and grow utilities, changing flex-shrink-0 to shrink-0 and flex-grow to grow.

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                 <h3 class="text-xl font-bold text-gray-800 mb-4">Deprecated Flex</h3>
                 <div class="space-y-3">
                     <div class="flex items-center">
-                        <div class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full mr-3"></div>
-                        <span class="text-gray-600 flex-grow">flex-shrink-0</span>
+                        <div class="shrink-0 w-4 h-4 bg-blue-500 rounded-full mr-3"></div>
+                        <span class="text-gray-600 grow">shrink-0 (was flex-shrink-0)</span>
                     </div>
                     <div class="flex items-center">
-                        <div class="flex-grow-0 w-4 h-4 bg-green-500 rounded-full mr-3"></div>
-                        <span class="text-gray-600 flex-grow">flex-grow-0</span>
+                        <div class="grow-0 w-4 h-4 bg-green-500 rounded-full mr-3"></div>
+                        <span class="text-gray-600 grow">grow-0 (was flex-grow-0)</span>
                     </div>
                     <p class="text-sm text-gray-500">
-                        Will become: shrink-0, grow-0
+                        Migrated to: shrink-0, grow-0
                     </p>
                 </div>
             </div>
