--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 <div>
                     <h3 class="text-lg font-semibold text-gray-700 mb-4">Overflow Ellipsis</h3>
                     <div class="w-48 border border-gray-300 rounded p-3">
-                        <p class="overflow-hidden overflow-ellipsis whitespace-nowrap">
+                        <p class="overflow-hidden text-ellipsis whitespace-nowrap">
                             This text will be truncated with ellipsis when it overflows
                         </p>
                     </div>
                     <p class="text-sm text-gray-500 mt-2">
-                        overflow-ellipsis → text-ellipsis
+                        overflow-ellipsis → text-ellipsis (migrated)
                     </p>
                 </div>
                 <div>
